Bug 317213 magnification loses focus of text element and moves to the top of the application patch by evan.yan@sun.com r=aaronleventhal sr=roc